// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-datepicker #render should render component as expected (1) 1`] = `
<gux-calendar mode="single" value="1997-08-29">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            August 1997
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="869961600000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870048000000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870134400000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870220800000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870307200000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870393600000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870480000000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="870566400000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870652800000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870739200000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870825600000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870912000000" tabindex="-1">
              <div class="gux-date">
                7
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870998400000" tabindex="-1">
              <div class="gux-date">
                8
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871084800000" tabindex="-1">
              <div class="gux-date">
                9
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871171200000" tabindex="-1">
              <div class="gux-date">
                10
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871257600000" tabindex="-1">
              <div class="gux-date">
                11
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871344000000" tabindex="-1">
              <div class="gux-date">
                12
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871430400000" tabindex="-1">
              <div class="gux-date">
                13
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871516800000" tabindex="-1">
              <div class="gux-date">
                14
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871603200000" tabindex="-1">
              <div class="gux-date">
                15
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871689600000" tabindex="-1">
              <div class="gux-date">
                16
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871776000000" tabindex="-1">
              <div class="gux-date">
                17
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871862400000" tabindex="-1">
              <div class="gux-date">
                18
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871948800000" tabindex="-1">
              <div class="gux-date">
                19
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872035200000" tabindex="-1">
              <div class="gux-date">
                20
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872121600000" tabindex="-1">
              <div class="gux-date">
                21
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872208000000" tabindex="-1">
              <div class="gux-date">
                22
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872294400000" tabindex="-1">
              <div class="gux-date">
                23
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872380800000" tabindex="-1">
              <div class="gux-date">
                24
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872467200000" tabindex="-1">
              <div class="gux-date">
                25
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872553600000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872640000000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872726400000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-selected" data-date="872812800000" tabindex="0">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872899200000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872985600000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873072000000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873158400000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873244800000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873331200000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873417600000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873504000000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-datepicker #render should render component as expected (2) 1`] = `
<gux-calendar mode="range" number-of-months="2" value="2019-11-25/2019-12-02">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            November 2019
          </label>
          <label>
            December 2019
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1572134400000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  October 2019
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1572220800000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  October 2019
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1572307200000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  October 2019
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1572393600000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  October 2019
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1572480000000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  October 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1572566400000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1572652800000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1572739200000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1572825600000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1572912000000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1572998400000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573084800000" tabindex="-1">
              <div class="gux-date">
                7
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573171200000" tabindex="-1">
              <div class="gux-date">
                8
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573257600000" tabindex="-1">
              <div class="gux-date">
                9
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1573344000000" tabindex="-1">
              <div class="gux-date">
                10
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573430400000" tabindex="-1">
              <div class="gux-date">
                11
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573516800000" tabindex="-1">
              <div class="gux-date">
                12
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573603200000" tabindex="-1">
              <div class="gux-date">
                13
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573689600000" tabindex="-1">
              <div class="gux-date">
                14
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573776000000" tabindex="-1">
              <div class="gux-date">
                15
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1573862400000" tabindex="-1">
              <div class="gux-date">
                16
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1573948800000" tabindex="-1">
              <div class="gux-date">
                17
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574035200000" tabindex="-1">
              <div class="gux-date">
                18
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574121600000" tabindex="-1">
              <div class="gux-date">
                19
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574208000000" tabindex="-1">
              <div class="gux-date">
                20
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574294400000" tabindex="-1">
              <div class="gux-date">
                21
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574380800000" tabindex="-1">
              <div class="gux-date">
                22
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1574467200000" tabindex="-1">
              <div class="gux-date">
                23
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1574553600000" tabindex="-1">
              <div class="gux-date">
                24
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered gux-selected gux-start-date" data-date="1574640000000" tabindex="0">
              <div class="gux-date">
                25
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1574726400000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1574812800000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1574899200000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1574985600000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1575072000000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  November 2019
                </span>
              </div>
            </td>
          </tr>
        </table>
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
            <th>
              S
            </th>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" class="gux-hovered" data-date="1575158400000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-end-date gux-hovered gux-selected" data-date="1575244800000" tabindex="0">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575331200000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575417600000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575504000000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575590400000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575676800000" tabindex="-1">
              <div class="gux-date">
                7
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1575763200000" tabindex="-1">
              <div class="gux-date">
                8
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575849600000" tabindex="-1">
              <div class="gux-date">
                9
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1575936000000" tabindex="-1">
              <div class="gux-date">
                10
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576022400000" tabindex="-1">
              <div class="gux-date">
                11
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576108800000" tabindex="-1">
              <div class="gux-date">
                12
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576195200000" tabindex="-1">
              <div class="gux-date">
                13
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576281600000" tabindex="-1">
              <div class="gux-date">
                14
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1576368000000" tabindex="-1">
              <div class="gux-date">
                15
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576454400000" tabindex="-1">
              <div class="gux-date">
                16
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576540800000" tabindex="-1">
              <div class="gux-date">
                17
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576627200000" tabindex="-1">
              <div class="gux-date">
                18
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576713600000" tabindex="-1">
              <div class="gux-date">
                19
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576800000000" tabindex="-1">
              <div class="gux-date">
                20
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1576886400000" tabindex="-1">
              <div class="gux-date">
                21
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1576972800000" tabindex="-1">
              <div class="gux-date">
                22
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577059200000" tabindex="-1">
              <div class="gux-date">
                23
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577145600000" tabindex="-1">
              <div class="gux-date">
                24
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577232000000" tabindex="-1">
              <div class="gux-date">
                25
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577318400000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577404800000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577491200000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="1577577600000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577664000000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="1577750400000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  December 2019
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1577836800000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  January 2020
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1577923200000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  January 2020
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1578009600000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  January 2020
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="true" class="gux-hidden gux-not-in-month" data-date="1578096000000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  January 2020
                </span>
              </div>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-datepicker #render should render component as expected (3) 1`] = `
<gux-calendar mode="single" start-day-of-week="6" value="1997-08-29">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            August 1997
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              S
            </th>
            <th>
              S
            </th>
            <th>
              M
            </th>
            <th>
              T
            </th>
            <th>
              W
            </th>
            <th>
              T
            </th>
            <th>
              F
            </th>
          </tr>
          <tr>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="869875200000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="869961600000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870048000000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870134400000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870220800000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870307200000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  July 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870393600000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="870480000000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870566400000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870652800000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870739200000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870825600000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870912000000" tabindex="-1">
              <div class="gux-date">
                7
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870998400000" tabindex="-1">
              <div class="gux-date">
                8
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871084800000" tabindex="-1">
              <div class="gux-date">
                9
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871171200000" tabindex="-1">
              <div class="gux-date">
                10
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871257600000" tabindex="-1">
              <div class="gux-date">
                11
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871344000000" tabindex="-1">
              <div class="gux-date">
                12
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871430400000" tabindex="-1">
              <div class="gux-date">
                13
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871516800000" tabindex="-1">
              <div class="gux-date">
                14
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871603200000" tabindex="-1">
              <div class="gux-date">
                15
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871689600000" tabindex="-1">
              <div class="gux-date">
                16
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871776000000" tabindex="-1">
              <div class="gux-date">
                17
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871862400000" tabindex="-1">
              <div class="gux-date">
                18
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871948800000" tabindex="-1">
              <div class="gux-date">
                19
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872035200000" tabindex="-1">
              <div class="gux-date">
                20
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872121600000" tabindex="-1">
              <div class="gux-date">
                21
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872208000000" tabindex="-1">
              <div class="gux-date">
                22
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872294400000" tabindex="-1">
              <div class="gux-date">
                23
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872380800000" tabindex="-1">
              <div class="gux-date">
                24
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872467200000" tabindex="-1">
              <div class="gux-date">
                25
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872553600000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872640000000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872726400000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-selected" data-date="872812800000" tabindex="0">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872899200000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872985600000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  August 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873072000000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873158400000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873244800000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873331200000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873417600000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  September 1997
                </span>
              </div>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;

exports[`gux-datepicker #render should render component as expected (4) 1`] = `
<gux-calendar lang="ar" mode="single" value="1997-08-29">
  <mock:shadow-root>
    <div class="gux-calendar">
      <div class="gux-header">
        <button aria-hidden="true" class="gux-left" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-left"></gux-icon>
        </button>
        <div class="gux-month-list">
          <label>
            أغسطس ١٩٩٧
          </label>
        </div>
        <button aria-hidden="true" class="gux-right" tabindex="-1" type="button">
          <gux-icon decorative="" icon-name="chevron-small-right"></gux-icon>
        </button>
      </div>
      <div class="gux-content">
        <table>
          <tr>
            <th>
              س
            </th>
            <th>
              ح
            </th>
            <th>
              ن
            </th>
            <th>
              ث
            </th>
            <th>
              ر
            </th>
            <th>
              خ
            </th>
            <th>
              ج
            </th>
          </tr>
          <tr>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="869875200000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="869961600000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870048000000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870134400000" tabindex="-1">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870220800000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="870307200000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  يوليو ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870393600000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="870480000000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870566400000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870652800000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870739200000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870825600000" tabindex="-1">
              <div class="gux-date">
                6
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870912000000" tabindex="-1">
              <div class="gux-date">
                7
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="870998400000" tabindex="-1">
              <div class="gux-date">
                8
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871084800000" tabindex="-1">
              <div class="gux-date">
                9
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871171200000" tabindex="-1">
              <div class="gux-date">
                10
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871257600000" tabindex="-1">
              <div class="gux-date">
                11
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871344000000" tabindex="-1">
              <div class="gux-date">
                12
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871430400000" tabindex="-1">
              <div class="gux-date">
                13
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871516800000" tabindex="-1">
              <div class="gux-date">
                14
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871603200000" tabindex="-1">
              <div class="gux-date">
                15
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="871689600000" tabindex="-1">
              <div class="gux-date">
                16
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871776000000" tabindex="-1">
              <div class="gux-date">
                17
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871862400000" tabindex="-1">
              <div class="gux-date">
                18
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="871948800000" tabindex="-1">
              <div class="gux-date">
                19
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872035200000" tabindex="-1">
              <div class="gux-date">
                20
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872121600000" tabindex="-1">
              <div class="gux-date">
                21
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872208000000" tabindex="-1">
              <div class="gux-date">
                22
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872294400000" tabindex="-1">
              <div class="gux-date">
                23
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872380800000" tabindex="-1">
              <div class="gux-date">
                24
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872467200000" tabindex="-1">
              <div class="gux-date">
                25
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872553600000" tabindex="-1">
              <div class="gux-date">
                26
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872640000000" tabindex="-1">
              <div class="gux-date">
                27
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872726400000" tabindex="-1">
              <div class="gux-date">
                28
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" class="gux-selected" data-date="872812800000" tabindex="0">
              <div class="gux-date">
                29
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td aria-disabled="false" aria-hidden="false" data-date="872899200000" tabindex="-1">
              <div class="gux-date">
                30
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="false" aria-hidden="false" data-date="872985600000" tabindex="-1">
              <div class="gux-date">
                31
                <span class="gux-sr-only">
                  أغسطس ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873072000000" tabindex="-1">
              <div class="gux-date">
                1
                <span class="gux-sr-only">
                  سبتمبر ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873158400000" tabindex="-1">
              <div class="gux-date">
                2
                <span class="gux-sr-only">
                  سبتمبر ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873244800000" tabindex="-1">
              <div class="gux-date">
                3
                <span class="gux-sr-only">
                  سبتمبر ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873331200000" tabindex="-1">
              <div class="gux-date">
                4
                <span class="gux-sr-only">
                  سبتمبر ١٩٩٧
                </span>
              </div>
            </td>
            <td aria-disabled="true" aria-hidden="false" class="gux-not-in-month" data-date="873417600000" tabindex="-1">
              <div class="gux-date">
                5
                <span class="gux-sr-only">
                  سبتمبر ١٩٩٧
                </span>
              </div>
            </td>
          </tr>
        </table>
      </div>
    </div>
  </mock:shadow-root>
</gux-calendar>
`;
